# ai-_voice_assitant

./: back_main.py  main.py  prompts.py  pyproject.toml  requirements.txt
frontend/: index.html
